fixed overflowing tables + sticky actions

--- a/app/src/assets/style/components.scss
+++ b/app/src/assets/style/components.scss
@@ -15,6 +15,8 @@ nav.navbar {
 }
 
 .main-view {
+  padding-left: 294px;
+  
   .main-header {
     display: flex;
     align-items: center;
@@ -43,7 +45,7 @@ nav.navbar {
 }
 
 .card {
-  // overflow: hidden;
+  // overflow: auto;
   border-radius: $radius;
 
   .card-header {
